--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,3 +10,5 @@ rust-crypto = "0.2.36"
 shared = { path = "../shared" }
 rand = "0.9.0"
 sha2 = "0.10.8"
+serde = { version = "1.0", features = ["derive"] }
+reqwest = { version = "0.12.12", features = ["blocking", "json"] }
