--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2024"
 [lib]
 name = "shared"
 path = "./src/lib.rs"
+
+[dependencies]
+serde = { version = "1.0", features = ["derive"] }
