--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -12,3 +12,5 @@ rand = "0.9.0"
 sha2 = "0.10.8"
 serde = { version = "1.0", features = ["derive"] }
 reqwest = { version = "0.12.12", features = ["blocking", "json"] }
+rs_merkle = "1.4.2"
+argon2 = "0.5.3"
